Fix mobile overflow & added logo

--- a/app/globals.css
+++ b/app/globals.css
@@ -87,3 +87,12 @@
   -webkit-text-fill-color: transparent;
   color: unset;
 }
+
+.fade-title {
+  background-image: url("../public/noise-extra.webp"),
+    /* linear-gradient(127.94deg, #80b7cc, #6686a0 44.2%, #566b80 67.71%, #7398ad); */
+      linear-gradient(to right bottom, #fff 30%, hsla(0, 0%, 100%, 0.5));
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
